--- a/app/src/main/res/layout/fragment_list_booking.xml
+++ b/app/src/main/res/layout/fragment_list_booking.xml
@@ -21,14 +21,16 @@
                 android:layout_height="wrap_content"
                 android:gravity="right">
                 <TextView
+                    android:textAlignment="center"
                     android:id="@+id/title"
                     android:layout_weight="1"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
                     android:text="Lịch sử đặt sân"
-                    android:textSize="20dp"
-                    android:textColor="@color/white"/>
+                    android:textSize="24dp"
+                    android:textColor="@color/white"
+                    tools:ignore="RtlCompat" />
 
             </LinearLayout>
 
