--- a/app/src/main/res/layout/fragment_profile_player.xml
+++ b/app/src/main/res/layout/fragment_profile_player.xml
@@ -125,7 +125,7 @@
                                 android:background="@drawable/shape"
 
                                 android:id="@+id/btnDecline"
-                                android:text="Decline Team"
+                                android:text="Từ chối"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"></Button>
 
@@ -136,7 +136,7 @@
                                 android:textColor="@color/white"
                                 android:background="@drawable/shape"
                                 android:id="@+id/btnAccept"
-                                android:text="Accept to Team "
+                                android:text="Chấp nhận"
                                 app:layout_constraintLeft_toLeftOf="parent"
                                 app:layout_constraintRight_toRightOf="parent"
                                 app:layout_constraintTop_toBottomOf="@+id/lblName"
